--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "prepare": "husky install"
   },
   "dependencies": {
+    "@micro-stacks/react": "^1.0.3",
     "next": "^12.2.2",
     "next-seo": "^5.4.0",
     "react": "^18.2.0",
